# waffle

./: .gitignore  README.md  pyproject.toml
data/: 1.txt  128.txt  140.txt  616.txt  618.txt  deluxe_70.txt
data/dictionaries/: big5.txt  big7.txt  word7.txt
data/puzzles/: 100.txt  1041.txt  134.txt  216.txt  396.txt  548.txt  613.txt  614.txt  615.txt  617.txt  619.txt  620.txt  621.txt  622.txt  623.txt  624.txt  625.txt  626.txt  627.txt  628.txt  629.txt  630.txt  631.txt  632.txt  633.txt  634.txt  635.txt  636.txt  637.txt  638.txt  639.txt  640.txt  641.txt  642.txt  643.txt  644.txt  645.txt  646.txt  647.txt  648.txt  (+91 more)
data/solutions/: deluxe_1.txt
doc/: blog.org  blog.tex  comment.txt  group_question.org  talk_outline.org
doc/puzzles/: waffle719.txt
waffle/: __init__.py  clue.py  cycles.py  derangements.py  display.py  encoding.py  get_words.py  group.py  old_sample.py  patterns.py  poisson_dirichlet.py  reconstruct.py  sample.py  steg.py  transposition.py  waffle_solve.py
